# rmb_ws

./: .gitignore  README.md  backing_up_database_to_file.txt  setup_database.txt
documentation/assign1/backups/: baseExample.sql
documentation/assign3/: build_micro_ROS.txt
documentation/assign3/backups/: baseExample.sql
documentation/assign3/installation and configuration/backups/: baseExample.sql
documentation/assign3/other/: Micro_ROS_Agent_build.bash  build_micro_ROS.txt
documentation/assign4/installation and configuration/backups/: OdometryDB.sql
g425_assign4_interfaces_pkg/: CMakeLists.txt  package.xml
g425_assign4_pkg/: CMakeLists.txt
src/G425_assign1_interfaces_pkg/: CMakeLists.txt
src/G425_assign1_interfaces_pkg/action/: Herkanser.action
src/G425_assign1_interfaces_pkg/msg/: Student.msg
src/G425_assign1_interfaces_pkg/srv/: Tentamens.srv
src/G425_assign1_pkg/src/: Database.cpp  FinalGradeDeterminator.cpp  HerkansingCijferDeterminator.cpp  HerkansingScheduler.cpp  minimum.cpp
src/g425_assign1_interfaces_pkg/: CMakeLists.txt  package.xml
src/g425_assign1_interfaces_pkg/action/: Retaker.action
src/g425_assign1_interfaces_pkg/msg/: Exam.msg  Student.msg  Tentamen.msg
src/g425_assign1_interfaces_pkg/srv/: Exams.srv  Tentamens.srv
src/g425_assign1_pkg/: CMakeLists.txt  package.xml
src/g425_assign1_pkg/config/: assign1_params.yaml
src/g425_assign1_pkg/data/: make_and_backup_database.txt
src/g425_assign1_pkg/data/backup/: grade_generator.sql
src/g425_assign1_pkg/include/g425_assign1_pkg/: GGDatabase.hpp
src/g425_assign1_pkg/launch/: grade_generator.launch.xml
src/g425_assign1_pkg/src/: Database.cpp  FinalGradeDeterminator.cpp  GGDatabase.cpp  GradeCalculator.cpp  ResultGenerator.cpp  RetakeGradeDeterminator.cpp  RetakeScheduler.cpp
src/g425_assign1_pkg/test/: systest_grade_generator.cpp  test_integration.cpp
src/g425_assign1_pkg/test/unit/: utest_final_grade_determinator.cpp  utest_ggDatabase.cpp  utest_grade_calculator.cpp  utest_result_generator.cpp  utest_retake_grade_determinator.cpp  utest_retake_scheduler.cpp
src/g425_assign3_interfaces_pkg/: CMakeLists.txt  package.xml
src/g425_assign3_interfaces_pkg/msg/: Imudata.msg
src/g425_assign3_pkg/: CMakeLists.txt  package.xml
src/g425_assign3_pkg/config/: assign3_params.yaml
src/g425_assign3_pkg/include/g425_assign3_pkg/: ImuDatabase.hpp
src/g425_assign3_pkg/launch/: assign3.launch.xml  assign3_wired.launch.xml  assign3_wireless.launch.xml
src/g425_assign3_pkg/src/: IMU_receiver_publisher.cpp  ImuDatabase.cpp  ImuLifecycleNode.cpp  LifecycleManager.cpp  Subscriber.cpp
src/g425_assign3_pkg/src/IMUsensor/: IMUsensor.ino
src/g425_assign3_pkg/src/IMUsensor_wireless/: IMUsensor_wireless.ino
src/g425_assign3_pkg/src/micro_ros_publisher/: micro_ros_publisher.ino  readBNO055.ino
src/g425_assign3_pkg/test/unit/: utest_imu_lifecycle.cpp  utest_lifecycle_manager.cpp  utest_subscriber.cpp
src/g425_assign4_interfaces_pkg/: CMakeLists.txt  package.xml
src/g425_assign4_interfaces_pkg/msg/: ImuSim.msg  Mecanum.msg  PositionData.msg
src/g425_assign4_pkg/: CMakeLists.txt  package.xml
src/g425_assign4_pkg/config/: params_assign4.yaml  params_assign4_squaredemo.yaml  simulator.rviz
src/g425_assign4_pkg/include/: sim.urdf.xacro
src/g425_assign4_pkg/include/g425_assign4_pkg/: OdometryDB.sql  OdometryDatabase.hpp
src/g425_assign4_pkg/launch/: assign4_launch.xml
src/g425_assign4_pkg/src/: DatabasePublisher.cpp  OdometryDatabase.cpp  broadcaster.cpp  nonloopingsensor_simulator.cpp  old_sensor_simulator.cpp  position_approximator_mecanum.cpp  position_velocity_approximator.cpp  sensor_simulator.cpp  wheel_velocity_simulator.cpp
src/g425_assign4_pkg/test/unit/: utest_database_publisher.cpp  utest_position_approximator_mecanum.cpp  utest_position_velocity_approximator.cpp  utest_sensor_simulator.cpp  utest_wheel_velocity_simulator.cpp
src/rmb25_assign1_interfaces_pkg/action/: Herkanser.action
src/rmb25_assign1_interfaces_pkg/msg/: Student.msg
src/rmb25_assign1_interfaces_pkg/srv/: Tentamens.srv
src/rmb25_assign1_pkg/: CMakeLists.txt  package.xml
src/rmb25_assign1_pkg/data/: student_db.csv
src/rmb25_assign1_pkg/include/rmb25_assign1_pkg/: Database.hpp
src/rmb25_assign1_pkg/src/: FinalGradeDeterminator.cpp  GradeCalculator.cpp  HerkansingCijferDeterminator.cpp  HerkansingScheduler.cpp  ResultGenerator.cpp
