<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>g425_assign1_pkg</name>
  <version>0.0.0</version>
  <description> ROS2 assignment: Tilmann's Cijfer Generator, using MariaDB </description>
  <maintainer email="burhantopaloglu60@gmail.com">burhan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <!-- additional depends -->
  <depend>g425_assign1_interfaces_pkg</depend>
  <!-- MariaDB -->
  <depend>libmariadb-dev</depend> 
  <depend>libmariadb3</depend>
  <depend>mariadb-connector-cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
